--- a/buttons/package.json
+++ b/buttons/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.0"
+    "grunt-autoprefixer": "^1.0.0",
+    "grunt-contrib-less": "^0.11.4"
   }
 }
