--- a/boilerplate/bower.json
+++ b/boilerplate/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "xxx",
+  "name": "__project__",
   "version": "0.0.0",
   "homepage": "https://github.com/emiljohansson/css-playground",
   "authors": [
