--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "burger_arrow",
+  "name": "__project__",
   "version": "0.0.0",
-  "description": "A simple animation, turning the settings burger to an arrow.",
+  "description": "description...",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.0"
+    "grunt-autoprefixer": "^1.0.0",
+    "grunt-contrib-less": "^0.11.4"
   }
 }
